[package]
name = "haccli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Argument parsing
clap = { version = "4.0.32", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11.13", features = ["blocking"] }
